tests/typechecking/return_value_error.june
// error: incompatible type at return

fun foo() -> i64 {
    return c"bob"
}

println(foo())